# Vexiiriscv-AES

./: MicroSoc.v  README-AES.md  README-Vexii.md  README.md  aes.py  aes_wrap.sv  bin_test_create.py  digilent.cfg  encrypt_bitstream.py  led_flashing.v  partial_flashing.prm  read_bin.py  send_bitstream.py  send_elf.py  soc.h  vexii.cfg
VexiiFirmware/: CMakeLists.txt  README.md
VexiiFirmware/app/: CMakeLists.txt  setup.cmake
VexiiFirmware/app/aes/: CMakeLists.txt  main.cpp  main2.cpp
VexiiFirmware/app/asm_app/: CMakeLists.txt  main.S
VexiiFirmware/app/asm_raw/: CMakeLists.txt  start.S
VexiiFirmware/app/bootloader/: CMakeLists.txt  main.cpp
VexiiFirmware/app/hello_world/: CMakeLists.txt  main.cpp
VexiiFirmware/app/uart/: CMakeLists.txt  main.cpp
VexiiFirmware/cmake/device/: vexiiriscv.cmake
VexiiFirmware/cmake/toolchain/: riscv.cmake
VexiiFirmware/common/hal/: CMakeLists.txt
VexiiFirmware/common/hal/legacy/: CMakeLists.txt  clint.h  io.h  plic.h  readme.md  type.h  uart.h
VexiiFirmware/common/hal/riscv/: CMakeLists.txt
VexiiFirmware/common/hal/riscv/clint/: CMakeLists.txt  clint.hpp
VexiiFirmware/common/hal/riscv/plic/: CMakeLists.txt  plic.hpp
VexiiFirmware/common/hal/spinal/: CMakeLists.txt
VexiiFirmware/common/hal/spinal/gpio/: CMakeLists.txt  gpio.hpp
VexiiFirmware/common/utils/: bytes.hpp  hex.hpp
VexiiFirmware/device/microsoc_sim/: CMakeLists.txt
VexiiFirmware/device/microsoc_sim/include/: CMakeLists.txt  device.hpp
VexiiFirmware/soc/common/: start.S  trap.cpp  trap.hpp
VexiiFirmware/soc/microsoc/default/: CMakeLists.txt
(+192 files in other folders)
